--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "helmet": "^3.23.1",
     "monk": "^7.3.0",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.10",
     "yup": "^0.29.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  }
 }
